--- a/app/src/main/res/layout/include_item_note_roll.xml
+++ b/app/src/main/res/layout/include_item_note_roll.xml
@@ -4,7 +4,7 @@
         tools:showIn="@layout/item_note_roll">
 
     <data>
-        <variable name="rollItem" type="sgtmelon.scriptum.model.item.RollItem"/>
+        <variable name="item" type="sgtmelon.scriptum.model.item.RollItem"/>
     </data>
 
     <LinearLayout
@@ -17,13 +17,13 @@
                 android:id="@+id/note_roll_check_image"
                 style="@style/Image.Note.Check"
                 android:contentDescription="@null"
-                android:src='@{rollItem != null &amp;&amp; rollItem.check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
+                android:src='@{item != null &amp;&amp; item.check ? @drawable/ic_check_done : @drawable/ic_check_outline}'
                 tools:srcCompat="@drawable/ic_check_done"/>
 
         <TextView
                 android:id="@+id/note_roll_content_text"
                 style="@style/Text.Note.Roll"
-                android:text='@{rollItem != null ? rollItem.text : ""}'
+                android:text='@{item != null ? item.text : ""}'
                 tools:text="@string/preview_note_roll"/>
 
     </LinearLayout>
