--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -43,25 +43,25 @@
                             android:id="@+id/note_roll_row0_container"
                             layout="@layout/include_item_note_roll"
                             android:visibility='@{item.rollList.size() &gt;= 1 ? View.VISIBLE : View.GONE}'
-                            app:rollItem='@{item.rollList.size() &gt;= 1 ? item.rollList.get(0) : null}'/>
+                            app:item='@{item.rollList.size() &gt;= 1 ? item.rollList.get(0) : null}'/>
 
                     <include
                             android:id="@+id/note_roll_row1_container"
                             layout="@layout/include_item_note_roll"
                             android:visibility='@{item.rollList.size() &gt;= 2 ? View.VISIBLE : View.GONE}'
-                            app:rollItem='@{item.rollList.size() &gt;= 2 ? item.rollList.get(1) : null}'/>
+                            app:item='@{item.rollList.size() &gt;= 2 ? item.rollList.get(1) : null}'/>
 
                     <include
                             android:id="@+id/note_roll_row2_container"
                             layout="@layout/include_item_note_roll"
                             android:visibility='@{item.rollList.size() &gt;= 3 ? View.VISIBLE : View.GONE}'
-                            app:rollItem='@{item.rollList.size() &gt;= 3 ? item.rollList.get(2) : null}'/>
+                            app:item='@{item.rollList.size() &gt;= 3 ? item.rollList.get(2) : null}'/>
 
                     <include
                             android:id="@+id/note_roll_row3_container"
                             layout="@layout/include_item_note_roll"
                             android:visibility='@{item.rollList.size() &gt;= 4 ? View.VISIBLE : View.GONE}'
-                            app:rollItem='@{item.rollList.size() &gt;= 4 ? item.rollList.get(3) : null}'/>
+                            app:item='@{item.rollList.size() &gt;= 4 ? item.rollList.get(3) : null}'/>
 
                     <include
                             layout="@layout/include_item_note_info"
