--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -28,9 +28,11 @@
             <include
                     android:id="@+id/rank_info_include"
                     layout="@layout/include_info"
+                    android:visibility="gone"
                     app:details='@{R.string.info_rank_empty_details}'
                     app:icon='@{R.mipmap.img_info_rank}'
-                    app:title='@{R.string.info_rank_empty_title}'/>
+                    app:title='@{R.string.info_rank_empty_title}'
+                    tools:visibility="visible"/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rank_recycler"
