--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -24,11 +24,9 @@
             <include
                     android:id="@+id/notification_info_include"
                     layout="@layout/include_info"
-                    android:visibility="gone"
                     app:details='@{R.string.info_notification_empty_details}'
                     app:icon='@{R.mipmap.img_info_notifications}'
-                    app:title='@{R.string.info_notification_empty_title}'
-                    tools:visibility="gone"/>
+                    app:title='@{R.string.info_notification_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notification_recycler"
