--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -23,11 +23,9 @@
             <include
                     android:id="@+id/bin_info_include"
                     layout="@layout/include_info"
-                    android:visibility="gone"
                     app:details='@{R.string.info_bin_empty_details}'
                     app:icon='@{R.mipmap.img_info_bin}'
-                    app:title='@{R.string.info_bin_empty_title}'
-                    tools:visibility="visible"/>
+                    app:title='@{R.string.info_bin_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/bin_recycler"
