--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -24,11 +24,9 @@
             <include
                     android:id="@+id/notes_info_include"
                     layout="@layout/include_info"
-                    android:visibility="gone"
                     app:details='@{isListHide ? R.string.info_notes_hide_details : R.string.info_notes_empty_details}'
                     app:icon='@{R.mipmap.img_info_notes}'
-                    app:title='@{isListHide ? R.string.info_notes_hide_title : R.string.info_notes_empty_title}'
-                    tools:visibility="visible"/>
+                    app:title='@{isListHide ? R.string.info_notes_hide_title : R.string.info_notes_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notes_recycler"
