--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -28,6 +28,12 @@
                     app:icon='@{R.mipmap.img_info_notifications}'
                     app:title='@{R.string.info_notification_empty_title}'/>
 
+            <ProgressBar
+                    android:id="@+id/notification_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notification_recycler"
                     style="@style/RecyclerView"
