Add progress bar to RankFragment
Tag: #New

--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -32,6 +32,12 @@
                     app:icon='@{R.mipmap.img_info_rank}'
                     app:title='@{R.string.info_rank_empty_title}'/>
 
+            <ProgressBar
+                    android:id="@+id/rank_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
+
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rank_recycler"
                     style="@style/RecyclerView"
